--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+::-webkit-scrollbar {
+  width: 0px;
+}
 
 /* ======== stream css overrides ======== */
 .str-video__call-stats {
